<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_default"
    android:padding="24dp">

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/troubleside"
        android:text="@string/counter_text"
        android:textColor="@color/white"
        android:textSize="108sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getRandomNumberButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_yellow"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/get_random_number"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decrementButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/incrementButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/btn_bg_yellow"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/increment_btn_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/decrementButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_yellow"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/decrement_btn_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incrementButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>