<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_default"
    android:padding="24dp">

    <!-- Видео блок -->
    <TextView
        android:id="@+id/videoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/troubleside"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="371dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoLabel" />

    <!-- Кнопки для управления видео -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playVideoButton"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:background="@drawable/button_bg_blue"
            android:fontFamily="@font/troubleside"
            android:textSize="22sp"
            android:text="@string/play"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pauseVideoButton"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:fontFamily="@font/troubleside"
            android:textSize="22sp"
            android:layout_marginStart="18dp"
            android:background="@drawable/button_bg_blue"
            android:text="@string/pause"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Аудио блок -->
    <TextView
        android:id="@+id/audioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/troubleside"
        android:text="@string/audio"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/audioProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioLabel" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioProgressBar">

        <!-- Блок кнопок управления аудио -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_orange"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pauseButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_orange"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stopButton"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_orange"
            android:fontFamily="@font/troubleside"
            android:paddingBottom="@dimen/btn_padding_bottom_default"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>